2003-02-25  David N. Welton  <davidw@dedasys.com>

	* logger.tcl: Require Tcl 8.2 - we use string map.

2003-01-30  David N. Welton  <davidw@dedasys.com>

	* loggerperformance.test: Changed file name so as to avoid
	  problems with autoindexer.

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* logger.man: More semantic markup, less visual one.
	* log.man:

2002-12-16  David N. Welton  <davidw@dedasys.com>

	* logger.test: Logger tests.

	* loggerperformance.tcl : Logger performance testing.

	* logger.man : Logger documentation.

	* logger.tcl: Initial commit of logger package.

2002-02-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* log.n:
	* log.man: Rewrote the introduction to the module for better
	  understanding by novices. Added examples to highlight use cases
	  from the simplest to more complex ones.

2002-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Version up to 1.0.1 to differentiate development from the
	  version in the tcllib 1.2 release.

	* log.tcl:
	* log.test: Updated code and tests to cover all paths through the
	  code.

2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* log.tcl: Restricted export list to public API.
	  [456255]. Patch by Hemang Lavana
	  <hemanglavana@users.sourceforge.net>

2001-03-20  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* New module 'log', a logging facility.